# pong-game

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md
cmake/: CMakeLists.txt  CMakePresets.json
project/include/: DeltaTimeClock.h  Game.h  GameEnums.h  RenderWindowManager.h  ScoreManager.h  SoundManager.h  StateManager.h
project/include/Observer/: Observable.h  Observer.h
project/include/command/: Command.h  Commands.h  InputManager.h
project/include/core/: DeltaTimeClock.h  RenderWindowManager.h  ScoreManager.h  SoundManager.h  StateManager.h
project/include/drawables/: AIPaddle.h  Ball.h  Button.h  Drawable.h  Paddle.h  RectButton.h
project/include/factory/: ButtonFactory.h
project/include/state/: GameOverState.h  MainMenuState.h  MenuState.h  PlayingState.h  State.h
project/include/utility/: Button.h  RectButton.h
project/src/: DeltaTimeClock.cpp  Game.cpp  RenderWindowManager.cpp  ScoreManager.cpp  SoundManager.cpp  StateManager.cpp  main.cpp
project/src/Observer/: Observable.cpp
project/src/command/: InputManager.cpp
project/src/core/: DeltaTimeClock.cpp  RenderWindowManager.cpp  ScoreManager.cpp  SoundManager.cpp  StateManager.cpp
project/src/drawables/: AIPaddle.cpp  Ball.cpp  Button.cpp  Drawable.cpp  Paddle.cpp  RectButton.cpp
project/src/factory/: ButtonFactory.cpp
project/src/state/: GameOverState.cpp  MainMenuState.cpp  MenuState.cpp  PlayingState.cpp
project/src/utility/: Button.cpp  RectButton.cpp
src/: main.cpp
